# Quant_Trade

./: .gitignore  Advancing Quant Trade Pipeline1.md  Advancing Quant Trade Pipeline2.md  Fixing Quant Pipeline Binary Serialization.md  README.md  current.md  graph.md  working.md
Quant_Trade/: Makefile  PROJECT_EXPLAINER.md  README.md  final.md  task.md
Quant_Trade/artifacts/: metadata.json  model.pkl  pipe.pkl
Quant_Trade/backend-go/: go.mod  go.sum
Quant_Trade/backend-go/internal/grpc/: market_data_server.go
Quant_Trade/configs/: dev.yaml
Quant_Trade/core-cpp/: CMakeLists.txt
Quant_Trade/core-cpp/benchmarks/: bench_risk_engine.cpp  latency_bench.cpp  matching_engine_bench.cpp  order_book_bench.cpp
Quant_Trade/core-cpp/include/common/: cacheline.hpp  config.hpp  constants.hpp  logger.hpp  types.hpp
Quant_Trade/core-cpp/include/execution/: ex.hpp
Quant_Trade/core-cpp/include/feed_handler/: feed_handler.hpp
Quant_Trade/core-cpp/include/grpc/: prediction_client.hpp
Quant_Trade/core-cpp/include/market_data/: market_data_bus.hpp  snapshot_builder.hpp  trade_publisher.hpp
Quant_Trade/core-cpp/include/matching_engine/: execution_report.hpp  matching_engine.hpp
Quant_Trade/core-cpp/include/memory/: arena_allocator.hpp  object_pool.hpp  order_pool.hpp  trade_pool.hpp
Quant_Trade/core-cpp/include/order_book/: order.hpp  order_book.hpp  order_node.hpp  price_level.hpp
Quant_Trade/core-cpp/include/queue/: disruptor.hpp  mpsc_ring_buffer.hpp  spsc_ring_buffer.hpp
Quant_Trade/core-cpp/include/risk/: position_manager.hpp  risk_manager.hpp
Quant_Trade/core-cpp/include/sequencer/: journal.hpp  sequencer.hpp
Quant_Trade/core-cpp/include/strategy/: strategy.hpp
Quant_Trade/core-cpp/results/: benchmark_20260608_001906.json  benchmark_20260608_002227.json  benchmark_20260608_003722.json
Quant_Trade/core-cpp/scripts/: run_benchmarks.py  run_risk_bench.py
Quant_Trade/core-cpp/tests/: matching_engine_test.cpp  order_book_test.cpp  risk_test.cpp  strategy_test.cpp
Quant_Trade/exchange-sim/: CMakeLists.txt
Quant_Trade/exchange-sim/cmd/exchange/: main.cpp
Quant_Trade/exchange-sim/market_data/: ws_publisher.hpp
Quant_Trade/exchange-sim/replay/: csv_parser.hpp  event.hpp  replay_controller.hpp  replay_engine.hpp
Quant_Trade/ml/: __init__.py
Quant_Trade/ml/data_gathering/: __init__.py  config.py  reader.py  recorder.py  replay.py  schema.py  validator.py  writer.py
Quant_Trade/ml/feature_engineering/: __init__.py  features.py
Quant_Trade/ml/inference/: __init__.py  prediction_pb2.py  prediction_pb2_grpc.py  predictor.py  server.py
Quant_Trade/ml/training/: evaluate.py  retrain.py  train.py
Quant_Trade/scripts/: generate_proto.sh  retrain_cron.sh  run_local.sh  stop_local.sh
ml_plan/: market_maker_ml_action_plan.md
(+16 files in other folders)
